--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "init": "^0.1.2",
     "joi": "^17.7.1",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "v": "^0.3.0"
   },
   "version": "1.0.0",
   "main": "app.js",
